2009-03-03  Mike Krüger  <mkrueger@novell.com>

	* Styles/TangoLightStyle.xml: Changed diff header style for
	  tango light.

2009-03-03  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj:
	* Styles/OblivionStyle.xml:
	* Styles/TangoLightStyle.xml:
	* SyntaxModes/DiffSyntaxMode.xml:
	* Mono.TextEditor.Highlighting/Span.cs:
	* Mono.TextEditor.Highlighting/Style.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Added diff file
	  syntax mode.

2009-03-02  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Worked on horizontal
	  scrolling behavior.

2009-03-02  Mike Krüger  <mkrueger@novell.com>

	* Styles/OblivionStyle.xml: fixed "Bug 480800 - please
	  highlight //TODO items as gedit does in oblivion style"

2009-02-26  Michael Hutchinson  <mhutchinson@novell.com>

	* SyntaxModes/ValaSyntaxMode.xml:
	* SyntaxModes/PythonSyntaxMode.xml:
	* Mono.TextEditor.Highlighting/Span.cs: Remove unused
	  constraint attribute.

	* SyntaxModes/AspNetSyntaxMode.xml: Better highlighting for
	  comments and cdata.

	* SyntaxModes/XmlSyntaxMode.xml: Better highlighting for
	  cdata.

2009-02-26  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor.csproj: Flush.

2009-02-25  Mike Krüger  <mkrueger@novell.com>

	* Styles/C64Style.xml: Fixed description.

2009-02-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Optimized pango
	  output a bit.

2009-02-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/Match.cs: fixed C# number
	  matching.

2009-02-24  Mike Krüger  <mkrueger@novell.com>

	* SyntaxModes/CSharpSyntaxMode.xml: Added highlighting for
	  undocumented keywords.

2009-02-22  Mike Krüger  <mkrueger@novell.com>

	* SyntaxModes/CSyntaxMode.xml:
	* SyntaxModes/BooSyntaxMode.xml:
	* SyntaxModes/JavaSyntaxMode.xml:
	* SyntaxModes/ValaSyntaxMode.xml:
	* SyntaxModes/VBNetSyntaxMode.xml:
	* SyntaxModes/PythonSyntaxMode.xml: