@@ -959,22 +959,27 @@ namespace Mono.TextEditor
 				return;
 			if (this.textEditorData.VAdjustment.Upper < Allocation.Height)  {
 				this.textEditorData.VAdjustment.Value = 0;
-				return;
+			} else {
+				int yMargin = 1 * this.LineHeight;
+				int caretPosition = Document.LogicalToVisualLine (Caret.Line) * this.LineHeight;
+				if (this.textEditorData.VAdjustment.Value > caretPosition) {
+					this.textEditorData.VAdjustment.Value = caretPosition;
+				} else if (this.textEditorData.VAdjustment.Value + this.textEditorData.VAdjustment.PageSize - this.LineHeight < caretPosition + yMargin) {
+					this.textEditorData.VAdjustment.Value = caretPosition - this.textEditorData.VAdjustment.PageSize + this.LineHeight + yMargin;
+				}
 			}
-			int yMargin = 1 * this.LineHeight;
-			int caretPosition = Document.LogicalToVisualLine (Caret.Line) * this.LineHeight;
-			if (this.textEditorData.VAdjustment.Value > caretPosition) {
-				this.textEditorData.VAdjustment.Value = caretPosition;
-			} else if (this.textEditorData.VAdjustment.Value + this.textEditorData.VAdjustment.PageSize - this.LineHeight < caretPosition + yMargin) {
-				this.textEditorData.VAdjustment.Value = caretPosition - this.textEditorData.VAdjustment.PageSize + this.LineHeight + yMargin;
-			}
-			int caretX = textViewMargin.ColumnToVisualX (Document.GetLine (Caret.Line), Caret.Column);
-			int textWith = Allocation.Width - textViewMargin.XOffset;
-			if (this.textEditorData.HAdjustment.Value > caretX) {
-				this.textEditorData.HAdjustment.Value = caretX;
-			} else if (this.textEditorData.HAdjustment.Value + textWith < caretX + TextViewMargin.CharWidth) {
-				int adjustment = System.Math.Max (0, caretX - textWith + TextViewMargin.CharWidth);
-				this.textEditorData.HAdjustment.Value = adjustment;
+			
+			if (this.textEditorData.HAdjustment.Upper < Allocation.Width)  {
+				this.textEditorData.HAdjustment.Value = 0;
+			} else {
+				int caretX = textViewMargin.ColumnToVisualX (Document.GetLine (Caret.Line), Caret.Column);
+				int textWith = Allocation.Width - textViewMargin.XOffset;
+				if (this.textEditorData.HAdjustment.Value > caretX) {
+					this.textEditorData.HAdjustment.Value = caretX;
+				} else if (this.textEditorData.HAdjustment.Value + textWith < caretX + TextViewMargin.CharWidth) {
+					int adjustment = System.Math.Max (0, caretX - textWith + TextViewMargin.CharWidth);
+					this.textEditorData.HAdjustment.Value = adjustment;
+				}
 			}
 		}
 		
